--- a/src/extension/_locales/ko/messages.json
+++ b/src/extension/_locales/ko/messages.json
@@ -204,7 +204,7 @@
     "message": "수동 추가"
   },
   "config_picker_button_title": {
-    "message": "$1을(를) 눌러 $2 선택"
+    "message": "$1(을)를 눌러 $2 선택하세요"
   },
   "config_project_add": {
     "message": "이 프로젝트 추가"
